--- a/a3_Regression.ipynb
+++ b/a3_Regression.ipynb
@@ -819,6 +819,8 @@
       "outputs": [],
       "source": [
         "from mpl_toolkits.mplot3d import Axes3D\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
         "# Define the corner points for X and Y\n",
         "# This gives 4 points = 2 x 2 permutations of the two different arrays.\n",
@@ -826,15 +828,15 @@
         "# Consider:\n",
         "# - How many points do you need to span the linear plane?\n",
         "# - which should you use?\n",
-        "x_plane = np.array([0, 100])\n",
-        "y_plane = np.array([0, 10])\n",
+        "x_plane = np.linspace(X[:, 1].min(), X[:, 1].max(), 2)  # size feature\n",
+        "y_plane = np.linspace(X[:, 2].min(), X[:, 2].max(), 2)  # distance to center feature\n",
         "\n",
         "# Create a mesh grid from the corner points\n",
         "X_plane, Y_plane = np.meshgrid(x_plane, y_plane)\n",
         "\n",
         "# Define the corresponding Z (height) values for each corner\n",
         "# TODO: And here you have to use projected values\n",
-        "Z_plane = np.array([[300, 400], [400, 500]])\n",
+        "Z_plane = model.weights[0] + model.weights[1] * X_plane + model.weights[2] * Y_plane\n",
         "\n",
         "# Create a figure for 3D plotting\n",
         "fig = plt.figure()\n",
@@ -844,9 +846,13 @@
         "surf = ax.plot_surface(X_plane, Y_plane, Z_plane, alpha=0.6)\n",
         "ax.view_init(elev=20, azim=-110)\n",
         "\n",
-        "\n",
         "# TODO: plot lines from prediction (on the surface) to real value\n",
-        "# ax.plot([], color='green', linewidth=2)\n",
+        "for i in range(len(X)):\n",
+        "    x_val = X[i, 1]\n",
+        "    y_val = X[i, 2]\n",
+        "    z_pred = model.predict(X[i:i+1])[0]\n",
+        "    z_true = Y[i, 0]\n",
+        "    ax.plot([x_val, x_val], [y_val, y_val], [z_pred, z_true], color='green', linewidth=1, linestyle='dotted')\n",
         "\n",
         "# Set labels\n",
         "ax.set_xlabel('X')\n",
@@ -947,11 +953,20 @@
         "        y : list or array-like, shape (n_samples,)\n",
         "            The dependent variable (e.g., price of apartments).\n",
         "        \"\"\"\n",
+        "        X = np.array(X)\n",
+        "        y = np.array(y)\n",
         "        n = len(X)  # Number of data points\n",
         "\n",
         "        # TODO: Calculate the slope (m) using the closed-form solution\n",
+        "        sum_x = np.sum(X)\n",
+        "        sum_y = np.sum(y)\n",
+        "        sum_xy = np.sum(X * y)\n",
+        "        sum_x_squared = np.sum(X ** 2)\n",
+        "\n",
+        "        self.slope = (n * sum_xy - sum_x * sum_y) / (n * sum_x_squared - sum_x ** 2)\n",
         "\n",
         "        # TODO: Calculate the intercept (b)\n",
+        "        self.intercept = (sum_y - self.slope * sum_x) / n\n",
         "\n",
         "    def predict(self, X):\n",
         "        \"\"\"\n",
